# voice-changer

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Justfile  README.md  duration_track.py  echo.py  instructions.md  plan.md  pyproject.toml  setup.sh  test.m4a  test_browser.py  test_client.py  voice_changer.py  voice_changer_modal.py  worker.py
api/: .dockerignore  Dockerfile  audio_processor.go  go.mod  main.go  voice_changer.go
data/: test_input.webm
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/__tests__/: test_client.test.ts
frontend/src/components/: AudioWaveform.css  AudioWaveform.tsx  PushToTalkButton.css  PushToTalkButton.tsx
frontend/src/hooks/: useAudioRecorder.ts  useWebRTC.ts  useWebSocket.ts
frontend/src/types/: koush-wrtc.d.ts  node-wav.d.ts
helm/voice-changer/: Chart.yaml  README.md  values.yaml
helm/voice-changer/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-service.yaml  frontend-deployment.yaml  frontend-service.yaml  turn-deployment.yaml  turn-secret.yaml  turn-service.yaml  worker-deployment.yaml  worker-service.yaml
k8s/: README.md  api-deployment.yaml  api-service.yaml  frontend-deployment.yaml  frontend-service.yaml  kind-metallb-config.yaml  kind-public-private.yaml  metallb-config.yaml  worker-deployment.yaml  worker-service.yaml
scripts/: build-images.sh  client.py  shift_pitch.py
tests/: test_smoke.py
