[project]
name = "voice-changer"
version = "0.1.0"
description = "Real-time voice changing app with push-to-talk functionality"
authors = [{ name = "Voice Changer Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "websockets>=12.0",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.26",
    "scipy>=1.11",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2",
    "pydub>=0.25",
    "modal>=0.64",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.14",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "client", "shift_pitch"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Allow lines longer than 88 characters

[tool.ruff.lint.isort]
known-first-party = ["voice_changer"]